Removes collapse function, fixes header height. For clock and photo mods

--- a/client/components/LatLong/LatLong.css
+++ b/client/components/LatLong/LatLong.css
@@ -1,19 +1,19 @@
 .height {
   max-height: 1200px;
-  -webkit-transition: max-height 0.3s; 
-  -moz-transition: max-height 0.3s; 
-  -ms-transition: max-height 0.3s; 
-  -o-transition: max-height 0.3s; 
+  -webkit-transition: max-height 0.3s;
+  -moz-transition: max-height 0.3s;
+  -ms-transition: max-height 0.3s;
+  -o-transition: max-height 0.3s;
   transition: max-height .3s;
   overflow: hidden;
 }
 
 .collapsedStyle {
   max-height: 0;
-  -webkit-transition: max-height 0.3s; 
-  -moz-transition: max-height 0.3s; 
-  -ms-transition: max-height 0.3s; 
-  -o-transition: max-height 0.3s; 
+  -webkit-transition: max-height 0.3s;
+  -moz-transition: max-height 0.3s;
+  -ms-transition: max-height 0.3s;
+  -o-transition: max-height 0.3s;
   transition: max-height .3s;
   overflow: hidden;
 }
@@ -22,6 +22,22 @@
   width: 100%;
 }
 
+.header {
+  flex: 0 0 auto;
+  line-height: 1.5em;
+}
+
 select {
   width: 100%;
+}
+
+.content {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+}
+
+.content > * {
+  flex: 1 0 auto;
 }
